[package]
name = "jsonrpc-param-ord"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
license = "Apache-2.0/MIT"

[dependencies]
bytes = "~0.4"
error-chain = "~0.11"
futures-await = { git = 'https://github.com/alexcrichton/futures-await' }
glob = "~0.2"
lazy_static = "~0.2"
serde = "~1"
serde_derive = "~1"
serde_json = "~1"
regex = "~0.2"
tokio-core = "~0.1"
tokio-io = "~0.1"
tokio-stdin-stdout = "~0.1"
tokio-process = "~0.1"
tokio-file-unix = "~0.4"
url = "~1"
