[package]
name = "jsonrpc-param-ord"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
workspace = ".."
license = "Apache-2.0/MIT"

[dependencies]
bytes = "~0.4"
error-chain = "~0.11"
futures-await = { git = 'https://github.com/alexcrichton/futures-await' }
serde = "~1"
serde_derive = "~1"
serde_json = "~1"
regex = "~0.2"
tokio-core = "~0.1"
tokio-io = "~0.1"
tokio-stdio = { git = "https://github.com/vorner/tokio-stdio" }
